--- a/sass/compat/plugins/woocommerce-paypal-payments/_checkout-place-order.scss
+++ b/sass/compat/plugins/woocommerce-paypal-payments/_checkout-place-order.scss
@@ -30,23 +30,20 @@ body.has-payment-method-selected--payment_method_ppcp-applepay .fc-wrapper .fc-p
 	padding: 0;
 }
 
+body.has-payment-method-selected--payment_method_ppcp-gateway .fc-wrapper .fc-checkout-steps .fc-place-order__custom-buttons:not( :empty ),
+body.has-payment-method-selected--payment_method_ppcp-credit-card-gateway .fc-wrapper .fc-checkout-steps .fc-place-order__custom-buttons:not( :empty ),
+body.has-payment-method-selected--payment_method_ppcp-googlepay .fc-wrapper .fc-checkout-steps .fc-place-order__custom-buttons:not( :empty ),
+body.has-payment-method-selected--payment_method_ppcp-applepay .fc-wrapper .fc-checkout-steps .fc-place-order__custom-buttons:not( :empty ) {
+	margin-top: $global-spacing;
+}
+
 body:not( .has-payment-method-selected--payment_method_ppcp-gateway ):not( .has-payment-method-selected--payment_method_ppcp-card-button-gateway ):not( .has-payment-method-selected--payment_method_ppcp-credit-card-gateway ):not( .has-payment-method-selected--payment_method_ppcp-googlepay ):not( .has-payment-method-selected--payment_method_ppcp-applepay ) .fc-wrapper .fc-place-order__custom-buttons,
 body:not( .has-payment-method-selected--payment_method_ppcp-gateway ):not( .has-payment-method-selected--payment_method_ppcp-card-button-gateway ):not( .has-payment-method-selected--payment_method_ppcp-credit-card-gateway ):not( .has-payment-method-selected--payment_method_ppcp-googlepay ):not( .has-payment-method-selected--payment_method_ppcp-applepay ) .fc-wrapper .ppc-button-wrapper {
 	margin: 0;
 }
 
-body.has-payment-method-selected--payment_method_ppcp-gateway .fc-wrapper .fc-place-order__custom-buttons:not( :empty ),
-body.has-payment-method-selected--payment_method_ppcp-credit-card-gateway .fc-wrapper .fc-place-order__custom-buttons:not( :empty ),
-body.has-payment-method-selected--payment_method_ppcp-googlepay .fc-wrapper .fc-place-order__custom-buttons:not( :empty ),
-body.has-payment-method-selected--payment_method_ppcp-applepay .fc-wrapper .fc-place-order__custom-buttons:not( :empty ) {
-	margin-top: $global-spacing;
-}
-
-
-
-.fc-wrapper .fc-place-order__custom-buttons .ppc-button-wrapper,
-.fc-wrapper .fc-place-order__custom-buttons #ppcp-hosted-fields {
-	margin: $global-spacing-small 0 $global-spacing-extra-small;
+body:not( .has-payment-method-selected--payment_method_ppcp-pay-upon-invoice-gateway ) .ppcp-messages {
+	line-height: 0;
 }
 
 
